Add AudioContext::ContextDestroyed

Currently AudioContext has no way of uninitializing the instance without
an explicit context closure. This extends BaseAudioContext's
ContextDestroyed to AudioContext so we can hook up its own uninitialize
routine, and then eventually calls the parent's uninitializer.

This also fixes other issue of UKM metrics being reported in less cases
because they were only reported when context.close() was called.

Bug: 856690, 688052, 670065
Change-Id: I721dc2c27201caab1b0a95baf8f6906f44b76979
Reviewed-on: https://chromium-review.googlesource.com/1115516
Commit-Queue: Hongchan Choi <hongchan@chromium.org>
Reviewed-by: Raymond Toy <rtoy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571349}
Former-commit-id: fbeb7bf25a794a2d482e56faab4577b09a36c9d5